--- a/client/templates/home.import.less
+++ b/client/templates/home.import.less
@@ -42,7 +42,9 @@
     .position(absolute, 55%, 50%, auto, auto, 60%);
     .transform(translate3d(50%, -50%,0));
     display: inline-block;
-
+    color: antiquewhite;
+    text-align: center;
+    font-size: 3.7em;
     img { width: 100%; }
   }
 
