--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -2,7 +2,7 @@
   <div id="admin">
     <a href="/" class="back-desktop"><span class="icon-arrow-left-alt"></span> Back</a>
     <div class="wrapper-admin">
-      {{#if isAdmin}}
+      <!-- {{#if isAdmin}} -->
         <h1 class="title-admin">Admin</h1>
 
         <form>
@@ -10,13 +10,13 @@
           <textarea name="text" rows="5" placeholder="Show the latest Local Market news on the the frontpage...">{{latestNews.text}}</textarea>
           <button type="submit" class="btn-primary">Save</button>
         </form>
-      {{else}}
-        <h1 class="title-admin">Forbidden</h1>
+      <!-- {{else}} -->
+        <!-- <h1 class="title-admin">Forbidden</h1>
         
         {{#unless currentUser}}
           <a class="login">Log in with Twitter</a>
-        {{/unless}}
-      {{/if}}
+        {{/unless}} -->
+      <!-- {{/if}} -->
     </div>
   </div>
 </template>
