--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -1,6 +1,6 @@
 <template name="appBody">
-  <div class="wrapper-welcome">
-    <div class="title-welcome">Local Market</div>
+  <!-- <div class="wrapper-welcome"> -->
+    <!-- <div class="title-welcome">Local Market</div>
     <div class="description-welcome">Local Market was made by <a href="http://percolatestudio.com" target="_blank" class="js-open">Percolate Studio</a> as an example of a cross platform mobile app built in <a href="https://www.meteor.com" target="_blank" class="js-open">Meteor</a>. The entire app is less than 1,000 lines of JavaScript. View the source on <a href="https://github.com/meteor/meteor/tree/devel/examples/localmarket" target="_blank" class="js-open">GitHub</a>.
     </div>
     
@@ -15,17 +15,17 @@
     <div class="description-welcome">
     This app includes a simple administrative backend that you can use to set welcome text on the app's home screen. Visit <a href="{{pathFor 'admin'}}">/admin</a> to log into the backend. The first authenticated user is allowed access.
     </div>
-  </div>
+  </div> -->
 
   <div id="container" class="{{menuOpen}} {{overlayOpen}}">
     <section id="menu" class="overthrow">
       <a href="{{pathFor 'home'}}" class="{{activePage 'home'}}">
         <span class="wrapper-menu-item">
           <span class="icon-home"></span>
-          <span class="title-menu">Home</span>
+          <span class="title-menu">Inicio</span>
         </span>
       </a>
-      <a href="{{pathFor 'feed'}}" class="{{activePage 'feed'}}">
+      <!-- <a href="{{pathFor 'feed'}}" class="{{activePage 'feed'}}">
         <span class="wrapper-menu-item">
           <span class="icon-rss"></span>
           <span class="title-menu">What's<br>Cooking</span>
@@ -36,20 +36,36 @@
           <span class="icon-category"></span>
           <span class="title-menu">Recipes</span>
         </span>
-      </a>
+      </a> -->
       <a href="{{pathFor 'bookmarks'}}" class="{{activePage 'bookmarks'}}">
         <span class="wrapper-menu-item">
           <span class="icon-bookmark-hollow"></span>
-          <span class="title-menu">Bookmarks</span>
+          <span class="title-menu">Clientes</span>
         </span>
       </a>
       <a href="{{pathFor 'about'}}" class="{{activePage 'about'}}">
         <span class="wrapper-menu-item">
           <span class="icon-question"></span>
-          <span class="title-menu">About</span>
+          <span class="title-menu">Acerca de</span>
         </span>
       </a>
+      {{#if currentUser}}
+      <a href="#" class="logout">
+        <span class="wrapper-menu-item">
+          <span class="icon-cross"></span>
+          <span class="title-menu">Salir</span>
+        </span>
+      </a>
+      {{else}}
+      <a href="{{pathFor 'login'}}" class="{{activePage 'login'}}">
+        <span class="wrapper-menu-item">
+          <span class="icon-sync"></span>
+          <span class="title-menu">Login</span>
+        </span>
+      </a>
+      {{/if}}
     </section>
+
 
       <div class="notifications">
         {{#unless connected}}
