client implementation added

--- a/client/stylesheets/globals/form.import.less
+++ b/client/stylesheets/globals/form.import.less
@@ -12,10 +12,14 @@ textarea {
   .placeholder(@color-medium);
   background: transparent;
   border: none;
-  border-radius: 0;
+  border-bottom: 2px solid #333333;
+  border-radius: 3px;
   box-sizing: border-box;
   color: @color-full;
   outline: none;
+  display: block;
+  width: 100%;
+
 
   &:active,
   &:focus {
