--- a/client/stylesheets/globals/list-recipes.import.less
+++ b/client/stylesheets/globals/list-recipes.import.less
@@ -5,7 +5,8 @@
   float: left;
   overflow: hidden;
   position: relative;
-  width: 50%;
+  // width: 50%;
+  padding: 5px;
 
   .attribution {
     .position(absolute, auto, 0, 0, 0);
