--- a/client/stylesheets/globals/message.import.less
+++ b/client/stylesheets/globals/message.import.less
@@ -15,5 +15,11 @@
   .subtitle-message {
     .font-s3;
     color: @color-medium;
+    
   }
+}
+.subtitle-message {
+  .font-s3;
+  color: @color-medium;
+  text-align: center;
 }
