--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -26,7 +26,7 @@
         {{else}} -->
           <div class="wrapper-message">
             <div class="title-message">No tienes clientes registrados todavia!</div>
-            <div class="subtitle-message">Puedes registrar a ususarios desde aca.</div>
+            <div class="subtitle-message">Puedes registrar a tus clientes desde <a href="{{pathFor 'clientForm'}}">aca</a>.</div>
           </div>
         <!-- {{/each}} -->
       </div>
